@@ -45,6 +45,7 @@ documents those changes that are of interest to users and admins.
  -- Cancel a job step when one of it's nodes goes DOWN based upon the job 
     step's --no-kill option, by default the step is killed (previously the 
     job step remained running even without the --no-kill option).
+ -- Fix bug in logic to remove whitespace from plugstack.conf.
 
 * Changes in SLURM 1.3.8
 ========================
